# CirnoNotBaka

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: models.py  run.py  run_bot.py  start.py  types_alias.py
app/config/: dev.py
app/filters/: users.py
app/handlers/: register.py  start.py
app/repos/: user.py
app/services/: register.py
migrations/cirna/: 0_20230309234945_init.py  1_20230302025235_None.py  1_20230310001655_user_field_created.py
